# kzmd-updater-svn

branches/duncan-refactoring/opensuse-updater/: CMakeLists.txt  Makefile.am
branches/duncan-refactoring/opensuse-updater/doc/: CMakeLists.txt
branches/duncan-refactoring/opensuse-updater/icons/: CMakeLists.txt  Makefile.am
branches/duncan-refactoring/opensuse-updater/images/: CMakeLists.txt  Makefile.am
branches/duncan-refactoring/opensuse-updater/kxmlrpcclient/: CMakeLists.txt  kxmlrpcquery.cpp  kxmlrpcserver.cpp
branches/duncan-refactoring/opensuse-updater/kzmdauthutil/: CMakeLists.txt
branches/duncan-refactoring/opensuse-updater/po/: CMakeLists.txt  bn.po  cy.po  en_GB.po  en_US.po  et.po  fi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lo.po  nb.po  nl.po  pt_BR.po  ru.po  ta.po  tr.po  vi.po  zh_TW.po
branches/duncan-refactoring/opensuse-updater/udshttp/: CMakeLists.txt  Makefile.am
branches/duncan-refactoring/opensuse-updater/updater/: CMakeLists.txt  Constants.h  HeaderWidget.cpp  MainWindow.cpp  MainWindow.h  Makefile.am  TrayIcon.cpp  UpdateListItem.cpp  UpdateListItem.h  Updater.cpp  Updater.h  UpdaterApplication.cpp  UpdaterApplication.h  opensuseupdater.desktop  opensuseupdater_backend.desktop  opensuseupdater_settings.kcfg  osupdaterpopup.cpp  osupdaterpopup.h
trunk/: Makefile.in  configure  (+1 more)
trunk/extra/kioudshttp/udshttp/: Makefile.am
trunk/extra/kzmdrepoconfig/src/: FeedDialog.cpp  FeedDialog.h  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  RepoFeed.cpp  RepoFeed.h  ZmdUpdaterCore.cpp  ZmdUpdaterCore.h  ZmdUpdaterCoreUtils.h  main.cpp
trunk/extra/kzmduserconfig/: Doxyfile  EditWindow.h  MainWindow.cpp  Makefile  Makefile.am  Makefile.in  ZmdUpdaterCore.cpp  ZmdUpdaterCoreUtils.h  configure  configure.in  configure.in.in  subdirs
trunk/extra/kzmduserconfig/autom4te.cache/: output.1  requests
trunk/extra/kzmduserconfig/debug/: Makefile  config.h  config.status  libtool
trunk/extra/kzmduserconfig/kxmlrpcclient/: Makefile.in
trunk/extra/kzmduserconfig/src/: .MainWindow.cpp.swp  MainWindow.cpp  MainWindow.h  Makefile.in  main.cpp
trunk/kxmlrpcclient/src/: .Makefile.am.swp  Makefile.am  Makefile.in  kxmlrpcclient.cpp  kxmlrpcclient.h  kxmlrpcquery.cpp  kxmlrpcquery.h  kxmlrpcserver.cpp  kxmlrpcserver.h
trunk/kzmdupdater/kzmdupdater/: CatalogListItem.cpp  CatalogListItem.h  ConfigWindow.cpp  ConfigWindow.h  DependencyDialog.cpp  HeaderWidget.cpp  HeaderWidget.h  InstallWindow.cpp  InstallWindow.h  Makefile  Makefile.am  Makefile.in  ProgressDialog.cpp  ProgressDialog.h  SUSEUpdater.cpp  SUSEUpdater.h  SUSEUpdaterIface.h  ServerDialog.cpp  ServerDialog.h  UpdaterCore.h  ZmdUpdaterCore.cpp  ZmdUpdaterCore.h  kzmdupdater.desktop  main.cpp  xmlrpciface.cpp
trunk/kzmdupdater/kzmdupdater/.deps/: HeaderWidget.Po  HeaderWidget.moc.Po  SUSEUpdater.Po  SUSEUpdater.moc.Po  main.Po
trunk/kzmdupdater/kzmdupdater/ZmdUpdaterCore/: ZmdUpdaterCore.h
trunk/opensuse-updater/: Makefile.am  configure.files  configure.in  configure.in.in  opensuse-updater.spec  opensuse-updater.spec.in  subdirs  suseupdater.spec
trunk/opensuse-updater/doc/: Makefile.am
trunk/opensuse-updater/doc/en/: index.docbook
trunk/opensuse-updater/images/: Makefile.am
trunk/opensuse-updater/kxmlrpcclient/: Makefile.am  kxmlrpcquery.h
trunk/opensuse-updater/kzmdauthutil/: Makefile.am
trunk/opensuse-updater/package/: opensuse-updater.changes  opensuse-updater.spec
trunk/opensuse-updater/po/: ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fr.po  gl.po  he.po  hi.po  hu.po  it.po  ka.po  km.po  lt.po  mk.po  nl.po  pa.po  pt.po  ro.po  sk.po  sl.po  sr.po  sv.po  uk.po  zh_CN.po
trunk/opensuse-updater/suseupdater/: GeneralConfigWindow.cpp  GeneralConfigWindow.h  MainWindow.h  TrayIcon.cpp  UpdaterApplication.h
trunk/opensuse-updater/suseupdater/zmd/: ZmdRugParser.h  kzmd-auth-user.sh
trunk/opensuse-updater/udshttp/: udshttp.cpp  udshttp.protocol
trunk/opensuse-updater/udshttp/test/: udstest.cpp
trunk/opensuse-updater/updater/: Constants.h  GeneralConfigWindow.cpp  HeaderWidget.cpp  MainWindow.cpp  MainWindow.h  Makefile.am  TrayIcon.cpp  TrayIcon.h  UpdateListItem.cpp  UpdateListItem.h  Updater.h  UpdaterApplication.cpp  UpdaterCapabilities.h  opensuse-start.desktop  opensuse-updater.desktop  opensusestart.desktop  opensuseupdater.desktop  opensuseupdater_settings.kcfg  opensuseupdater_settings.kcfgc  osupdaterpopup.cpp  osupdaterpopup.h  updatersettingswidget_base.ui
trunk/opensuse-updater/updater/zmd/: Makefile.am  ZmdAdvancedConfig.cpp  ZmdCatalogListItem.cpp  ZmdCatalogListItem.h  ZmdConfigWindow.cpp  ZmdConfigWindow.h  ZmdDependencyDialog.h  ZmdEditServers.cpp  ZmdEditServers.h  ZmdInstallWindow.h  ZmdProgressDialog.cpp  ZmdServerDialog.cpp  ZmdUpdateListItem.cpp  ZmdUpdateListItem.h  ZmdUpdater.cpp  ZmdUpdater.h  ZmdUpdaterCore.cpp  ZmdUpdaterCore.h  ZmdUpdaterCoreUtils.h
trunk/opensuse-updater/updater/zypp/: Makefile.am  ZYppListItem.h  ZYppUpdater.cpp  ZYppUpdater.h
trunk/suseupdater/kxmlrpcclient/: Makefile.am  Makefile.in  kxmlrpcquery.cpp  kxmlrpcserver.cpp  kxmlrpcserver.h
trunk/suseupdater/kzmdauthutil/: Makefile.am  Makefile.in
trunk/suseupdater/suseupdater/: Constants.h  GeneralConfigWindow.cpp  GeneralConfigWindow.h  HeaderWidget.cpp  HeaderWidget.h  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  TrayIcon.cpp  TrayIcon.h  UpdateListItem.cpp  UpdateListItem.h  Updater.h  UpdaterApplication.cpp  UpdaterApplication.h  ZmdAdvancedConfig.cpp  ZmdAdvancedConfig.h  ZmdCatalogListItem.cpp  ZmdConfigWindow.cpp  ZmdConfigWindow.cpp.mine  ZmdConfigWindow.h  ZmdDependencyDialog.cpp  ZmdDependencyDialog.h  ZmdEditServers.cpp  ZmdEditServers.h  ZmdInstallWindow.cpp  ZmdInstallWindow.h  ZmdProgressDialog.cpp  ZmdProgressDialog.h  ZmdRugParser.cpp  ZmdRugParser.h  ZmdServerDialog.cpp  ZmdServerDialog.h  ZmdUpdater.cpp  ZmdUpdater.h  ZmdUpdaterCore.cpp  ZmdUpdaterCore.h  ZmdUpdaterCoreUtils.h  desktop.autostart  (+5 more)
trunk/suseupdater/suseupdater/kxmlRpcClient/: Makefile.am  Makefile.in  kxmlrpcclient.h  xmlrpciface.h
(+276 files in other folders)
