PROJECT(opensuseupdater-kde)

FIND_PACKAGE(KDE3 REQUIRED)

# Library
IF ( DEFINED LIB )
  SET ( LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${LIB}" )
ELSE ( DEFINED  LIB )
  IF (CMAKE_SIZEOF_VOID_P MATCHES "8")
    SET( LIB_SUFFIX "64" )
  ENDIF(CMAKE_SIZEOF_VOID_P MATCHES "8")
  SET ( LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}" )
ENDIF ( DEFINED  LIB )
MESSAGE(STATUS "Libraries will be installed in ${LIB_INSTALL_DIR}" )

#CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )

# Get the kde3 dir. This is a bit tricky, i'm not sure how well
# this works on other systems.
STRING(REPLACE "/lib${LIB_SUFFIX}" "" KDE3_DIR ${KDE3_LIB_DIR})
MESSAGE(STATUS "KDE dir is ${KDE3_DIR}" )

# TODO: INSTALL PREFIX. RIGHT NOW EVERYTHING IS INSTALLED IN $KDEDIR
if(NOT CMAKE_INSTALL_PREFIX)
  set(CMAKE_INSTALL_PREFIX ${KDE3_DIR})
endif(NOT CMAKE_INSTALL_PREFIX)
set(KDE3_KCFG_DIR ${CMAKE_INSTALL_PREFIX}/share/config.kcfg)
set(KDE3_SERVICETYPES_DIR ${CMAKE_INSTALL_PREFIX}/share/servicetypes)
set(KDE3_SERVICES_DIR ${CMAKE_INSTALL_PREFIX}/share/services)
set(KDE3_XDG_APPS_DIR ${CMAKE_INSTALL_PREFIX}/share/applications/kde)
set(KDE3_LIB_INSTALL_DIR ${LIB_INSTALL_DIR} )
set(KDE3_PLUGIN_INSTALL_DIR ${KDE3_LIB_INSTALL_DIR}/kde3)

# tell cmake where to search for libraries:
link_directories(${KDE3_LIB_DIR})


ADD_SUBDIRECTORY( doc ) 
ADD_SUBDIRECTORY( icons ) 
ADD_SUBDIRECTORY( images ) 
ADD_SUBDIRECTORY( kxmlrpcclient ) 
ADD_SUBDIRECTORY( kzmdauthutil ) 
ADD_SUBDIRECTORY( po ) 
#ADD_SUBDIRECTORY( udshttp ) 
ADD_SUBDIRECTORY( updater ) 

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${KDE3_INCLUDE_DIR} ${QT_INCLUDE_DIR}  )

