# this has all of the subdirectories that make will recurse into.  if
# there are none, comment this out
#SUBDIRS =

# this is the program that gets installed.  it's name is used for all
# of the other Makefile.am variables
bin_PROGRAMS = kzmdauthutil

# set the include path for X, qt and KDE
#INCLUDES = $(all_includes)

# the library search path. 
#kzmdupdater_LDFLAGS = $(KDE_RPATH) $(all_libraries)

# which sources should be compiled for kzmdupdater
kzmdupdater_SOURCES = main.cpp 

